# triton-validation

./: .gitignore  Makefile  README.md  docker-compose.yaml
client/: .gitignore  Cargo.toml  README.md
client/src/: lib.rs  main.rs
client/src/routes/: test.rs
client/style/: output.css
models/triton/echo/: config.pbtxt
models/triton/echo/1/: model.py
models/triton/iq_classifier/: config.pbtxt
models/triton/iq_classifier/1/: model.py
scripts/: fetch-models.sh  load-models.sh
server/: Cargo.toml
server/src/: client_factory.rs  config.rs  env.rs  lib.rs  main.rs  server_factory.rs  utils.rs
server/src/clients/: http_client.rs  kube_client.rs  mod.rs  rabbitmq_client.rs
server/src/handlers/: job.rs
server/src/k8s/: constants.rs  mod.rs  pods.rs  scheduler.rs  utils.rs
server/src/service/: job.rs  scheduler.rs
server/src/worker/: coordinator.rs  worker.rs
sidecar/: Cargo.toml  Dockerfile
sidecar/src/: env.rs  goose.rs  main.rs  utils.rs
sidecar/src/clients/: mod.rs  model_client.rs  triton_client.rs
