[package]
name = "validaton_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.79.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
actix-web = "4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.69"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
lazy_static = "1.4.0"
tower = "0.4.13"
hyper = "0.14.24"
once_cell = "1.17.1"
